--- a/view/index.html
+++ b/view/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🏫 University Management System</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <style>
         body {
             max-width: 70%;
@@ -21,17 +22,31 @@
         p {
             color: bisque;
         }
+
+        .github-icon {
+            position: fixed;
+            top: 2.5rem;
+            right: 3rem;
+            font-size: 4rem;
+            color: aqua;
+            transition: all .5s;
+
+            &:hover {
+                text-shadow: 0px 0px 15px #ff0000;
+            }
+        }
     </style>
 </head>
 
 <body>
-    <!-- <div>
-        <img src="./imgs/github-icon.png" alt="github-icon">
-    </div> -->
+
+    <a href="https://github.com/aHasnat1997/university-management-system-typescript.git" class="github-icon">
+        <i class="fa-brands fa-github"></i>
+    </a>
+
     <h1>🏫 University Management System</h1>
     <p>Develop a Node.js Express application with TypeScript as the programming language, integrating MongoDB with
-        Mongoose for CRUD.</p>
-    <a href="https://github.com/aHasnat1997/university-management-system-typescript.git">Repo_Link🔗</a>
+        Mongoose for CRUD. </p>
 </body>
 
 </html>
