FIX: Transaction and rollback in user

--- a/view/index.html
+++ b/view/index.html
@@ -40,7 +40,8 @@
 
 <body>
 
-    <a href="https://github.com/aHasnat1997/university-management-system-typescript.git" class="github-icon">
+    <a href="https://github.com/aHasnat1997/university-management-system-typescript.git" target="_blank"
+        class="github-icon">
         <i class="fa-brands fa-github"></i>
     </a>
 
