FIX: some error

--- a/view/index.html
+++ b/view/index.html
@@ -5,32 +5,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Style</title>
+  <title>🏫 University Management System</title>
   <link rel="icon" type="image/x-icon" href="img/favicon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Pathway+Gothic+One&display=swap"
     rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
   <header class="sticky">
     <div class="logo head">
-      <a href="index.html">Simple<span>Style</span></a>
-    </div>
-    <div class="nav head">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html">Examples</a></li>
-        <li><a href="index.html">A Page</a></li>
-        <li><a href="index.html">Another Page</a></li>
-        <li><a href="index.html">Contact Us</a></li>
-      </ul>
+      <a href="index.html">University <span>Management</span></a>
     </div>
   </header>
   <div class="body">
+    <a href="https://github.com/aHasnat1997/university-management-system-typescript.git" target="_blank"
+      class="github-icon">
+      <i class="fa-brands fa-github"></i>
+    </a>
     <div class="content">
       <div class="mainCont">
-        <h2 class="text1">Welcome to the simplestyle template</h2>
+        <h2 class="text1">Welcome to the University Management System 🏫</h2>
         <p class="text2">This standards compliant, simple, fixed width website template is released as an 'open source'
           design (under a <a class="link" href="#">Creative Commons Attribution 3.0 Licence</a> ), which means that you
           are free to download and use it for anything you want (including modifying and amending it). All I ask is that
@@ -86,14 +82,6 @@
       </div>
     </div>
   </div>
-  <footer>
-    <p>
-      <a href="#">Home</a> | <a href="#">Examples</a> | <a href="#">A Page</a> | <a href="#">Another Page</a> | <a
-        href="#">Contact Us</a>
-    </p>
-    <p>Copyright © simplestyle_4 | <a href="#">HTML5</a> | <a href="#">CSS</a> | design from <a
-        href="https://www.html5webtemplates.co.uk/">HTML5webtemplates.co.uk</a></p>
-  </footer>
 </body>
 
 </html>
