--- a/view/css/style.css
+++ b/view/css/style.css
@@ -12,9 +12,12 @@ body {
 }
 
 header {
-  background-image: url(../img/top.png);
   width: 100%;
-  height: 200px;
+  padding: 2rem 0;
+  background-image: url(../img/top.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   border-bottom: 8px solid #00f2ff;
 }
 
@@ -24,7 +27,6 @@ header {
 }
 
 .logo {
-  padding-top: 40px;
   font-size: 60px;
   font-family: "Oxygen", sans-serif;
 }
@@ -48,17 +50,26 @@ header {
   top: 0px;
 }
 
-/* .nav{
-  border: 1px solid;
-} */
-.nav ul {
+.github-icon {
+  position: fixed;
+  bottom: 2.5rem;
+  right: 3rem;
+  font-size: 4rem;
+  color: aqua;
+  transition: all .5s;
+
+  &:hover {
+    text-shadow: 0px 0px 15px #ffd000;
+  }
+}
+
+/* .nav ul {
   list-style-type: none;
   float: right;
 }
 
 .nav ul li {
-  display: inline-block;
-  margin-top: 20px;
+  display: flex;
 }
 
 .nav ul li a {
@@ -75,12 +86,12 @@ header {
 .nav ul li a:hover {
   background-color: #00f2ff;
   color: #000000;
-}
+} */
 
 .body {
   background-image: url(../img/download.jfif);
   width: 100%;
-  height: 900px;
+  height: 100vh;
   margin-bottom: 0px;
 }
 
@@ -174,13 +185,4 @@ footer {
   height: 150px;
   text-align: center;
   color: #bcbcbc;
-}
-
-footer p a {
-  text-decoration: none;
-  color: #bcbcbc;
-}
-
-footer p a:hover {
-  color: #fff;
 }
