--- a/view/css/style.css
+++ b/view/css/style.css
@@ -1,188 +1,277 @@
-/* font-family: 'Oxygen', sans-serif;
-font-family: 'Pathway Gothic One', sans-serif; */
-
 * {
-  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body {
-  margin: 0px;
-  padding: 0px;
-  font-family: "Oxygen", sans-serif;
-}
-
-header {
+.main {
   width: 100%;
-  padding: 2rem 0;
-  background-image: url(../img/top.png);
-  background-repeat: no-repeat;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5)50%, rgba(0, 0, 0, 0.5)50%), url(../img/1.jpg);
+  /* background-image: url(../img/1.jpg); */
   background-position: center;
   background-size: cover;
-  border-bottom: 8px solid #00f2ff;
+  height: 100vh;
 }
 
-.head {
-  width: 65%;
-  margin: auto;
+.navbar {
+  width: 75%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.icon {
+  width: 200px;
+  float: left;
+  height: 70px;
 }
 
 .logo {
-  font-size: 60px;
-  font-family: "Oxygen", sans-serif;
+  color: #ff7200;
+  font-size: 50px;
+  font-family: Arial;
+  padding-left: 20px;
+  float: left;
+  padding-top: 10px;
+  margin-top: 5px
 }
 
-.logo a {
-  text-decoration: none;
-  color: #ffffff;
-  font-family: "Pathway Gothic One", sans-serif;
+.menu {
+  width: 400px;
+  float: left;
+  height: 70px;
 }
 
-.logo a span {
-  color: #ffff00;
-}
-
-.logo a span:hover {
-  color: #fff;
-}
-
-.sticky {
-  position: sticky;
-  top: 0px;
-}
-
-.github-icon {
-  position: fixed;
-  bottom: 2.5rem;
-  right: 3rem;
-  font-size: 4rem;
-  color: aqua;
-  transition: all .5s;
-
-  &:hover {
-    text-shadow: 0px 0px 15px #ffd000;
-  }
-}
-
-/* .nav ul {
-  list-style-type: none;
-  float: right;
-}
-
-.nav ul li {
+ul {
+  float: left;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.nav ul li a {
-  transition: .5s;
-  text-decoration: none;
+ul li {
+  list-style: none;
+  margin-left: 62px;
+  margin-top: 27px;
   font-size: 14px;
-  padding: 20px;
-  font-weight: bold;
-  color: #ffffff;
-  background-color: #00f2ff63;
-  border-radius: 15px 15px 0px 0px;
 }
 
-.nav ul li a:hover {
-  background-color: #00f2ff;
-  color: #000000;
-} */
+ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-family: Arial;
+  font-weight: bold;
+  transition: 0.4s ease-in-out;
+}
 
-.body {
-  background-image: url(../img/download.jfif);
-  width: 100%;
-  height: 100vh;
-  margin-bottom: 0px;
+ul li a:hover {
+  color: #ff7200;
+}
+
+.search {
+  width: 330px;
+  float: left;
+  margin-left: 270px;
+}
+
+.srch {
+  font-family: 'Times New Roman';
+  width: 200px;
+  height: 40px;
+  background: transparent;
+  border: 1px solid #ff7200;
+  margin-top: 13px;
+  color: #fff;
+  border-right: none;
+  font-size: 16px;
+  float: left;
+  padding: 10px;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+.btn {
+  width: 100px;
+  height: 40px;
+  background: #ff7200;
+  border: 2px solid #ff7200;
+  margin-top: 13px;
+  color: #fff;
+  font-size: 15px;
+  border-bottom-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  transition: 0.2s ease;
+  cursor: pointer;
+}
+
+.btn:hover {
+  color: #000;
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.srch:focus {
+  outline: none;
 }
 
 .content {
-  margin: auto;
-  width: 65%;
-  height: 500px;
-}
-
-.content .mainCont {
   width: 70%;
-  float: left;
-  padding-top: 40px;
-}
-
-.ulPad {
-  padding-left: 20px;
-}
-
-.ul1 {
-  list-style-type: none;
-  padding-left: 20px;
-}
-
-.content .asid {
-  width: 30%;
-  float: left;
-}
-
-.link {
-  color: #ffae00;
-}
-
-.link:hover {
-  text-decoration: none;
-}
-
-.text1 {
-  color: #ffffff;
-}
-
-.text3 {
-  color: #ffff00;
-}
-
-.text2 {
-  color: #bcbcbc;
-}
-
-.asid .box {
-  background-color: #bcbcbc1b;
-  border: 0px solid #808080;
-  border-radius: 15px;
-  padding: 5px 40px;
-  width: 100%;
-  margin: 25px;
-}
-
-.search-field {
-  display: flex;
-  gap: .5rem;
-}
-
-.searchBox {
-  margin-top: .6rem;
-  width: 60%;
-  height: 40px;
-  background-color: #adadad2c;
-  color: #bcbcbc;
-}
-
-.searchBox::placeholder {
+  height: 65%;
+  margin: 0 auto;
   color: #fff;
-  padding-left: .5rem;
+  position: relative;
+  padding-top: 5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-button {
-  border: 0px;
-  background-color: #80808000;
-  padding: 0px;
-  margin-top: 10px;
-  margin-bottom: 30px;
+.content .par {
+  padding-left: 20px;
+  padding-bottom: 25px;
+  padding-top: 25px;
+  font-family: Arial;
+  letter-spacing: 1.2px;
+  line-height: 30px;
 }
 
-footer {
-  background-color: #121d31;
-  margin-top: 0px;
-  padding-top: 20px;
-  margin: auto;
-  width: 100%;
-  height: 150px;
+.content h1 {
+  font-family: 'Times New Roman';
+  font-size: 50px;
+  padding-left: 20px;
+  margin-top: 9%;
+  letter-spacing: 2px;
+}
+
+.content .cn {
+  width: 160px;
+  height: 40px;
+  background: #ff7200;
+  border: none;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  font-size: 18px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: .4s ease;
+
+}
+
+.content .cn a {
+  text-decoration: none;
+  color: #000;
+  transition: .3s ease;
+}
+
+.cn:hover {
+  background-color: #fff;
+}
+
+.content span {
+  color: #ff7200;
+  font-size: 65px
+}
+
+.form {
+  width: 250px;
+  height: 380px;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.8)50%, rgba(0, 0, 0, 0.8)50%);
+  border-radius: 10px;
+  padding: 25px;
+}
+
+.form h2 {
+  width: 220px;
+  font-family: sans-serif;
   text-align: center;
-  color: #bcbcbc;
+  color: #ff7200;
+  font-size: 22px;
+  background-color: #fff;
+  border-radius: 10px;
+  margin: 2px;
+  padding: 8px;
+}
+
+.form input {
+  width: 240px;
+  height: 35px;
+  background: transparent;
+  border-bottom: 1px solid #ff7200;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  color: #fff;
+  font-size: 15px;
+  letter-spacing: 1px;
+  margin-top: 30px;
+  font-family: sans-serif;
+}
+
+.form input:focus {
+  outline: none;
+}
+
+::placeholder {
+  color: #fff;
+  font-family: Arial;
+}
+
+.btnn {
+  width: 240px;
+  height: 40px;
+  background: #ff7200;
+  border: none;
+  margin-top: 30px;
+  font-size: 18px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #fff;
+  transition: 0.4s ease;
+}
+
+.btnn:hover {
+  background: #fff;
+  color: #ff7200;
+}
+
+.btnn a {
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+}
+
+.form .link {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  padding-top: 20px;
+  text-align: center;
+}
+
+.form .link a {
+  text-decoration: none;
+  color: #ff7200;
+}
+
+.liw {
+  padding-top: 15px;
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.icons a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.icons ion-icon {
+  color: #fff;
+  font-size: 30px;
+  padding-left: 14px;
+  padding-top: 5px;
+  transition: 0.3s ease;
+}
+
+.icons ion-icon:hover {
+  color: #ff7200;
 }
