--- a/view/index.html
+++ b/view/index.html
@@ -2,86 +2,64 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🏫 University Management System</title>
-  <link rel="icon" type="image/x-icon" href="img/favicon.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Pathway+Gothic+One&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-  <link rel="stylesheet" href="css/style.css" />
+    <title>🏫 University Management System</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <header class="sticky">
-    <div class="logo head">
-      <a href="index.html">University <span>Management</span></a>
-    </div>
-  </header>
-  <div class="body">
-    <a href="https://github.com/aHasnat1997/university-management-system-typescript.git" target="_blank"
-      class="github-icon">
-      <i class="fa-brands fa-github"></i>
-    </a>
-    <div class="content">
-      <div class="mainCont">
-        <h2 class="text1">Welcome to the University Management System 🏫</h2>
-        <p class="text2">This standards compliant, simple, fixed width website template is released as an 'open source'
-          design (under a <a class="link" href="#">Creative Commons Attribution 3.0 Licence</a> ), which means that you
-          are free to download and use it for anything you want (including modifying and amending it). All I ask is that
-          you leave the 'design from HTML5webtemplates.co.uk' link in the footer of the template, but other than that...
-        </p>
-        <br />
-        <p class="text2">This template is written entirely in <strong>HTML5</strong> and<strong>CSS</strong> , and can
-          be validated using the links in the footer.</p>
-        <br />
-        <p class="text2">
-          You can view more free HTML5 web templates <a class="link" href="#">here...</a>
-        </p>
-        <p class="text2">This template is a fully functional 5 page website, with an examples page that gives <a
-            href="#" class="link">examples</a> of all the styles available with this design.</p>
-        <br /><br />
-        <h2 class="text3">Browser Compatibility</h2>
-        <p class="text2">This template has been tested in the following browsers:</p>
-        <ul class="text2 ulPad">
-          <li>Internet Explorer 8</li>
-          <li>Internet Explorer 7</li>
-          <li>FireFox 3.5</li>
-          <li>Google Chrome 6</li>
-          <li>Safari 4</li>
-        </ul>
-      </div>
-      <div class="asid">
-        <div class="box">
-          <h3 class="text1">Latest News</h3>
-          <p class="text3">NEW WEBSITE LAUNCHED</p>
-          <p class="text2">January 1st, 2010</p>
-          <p class="text2">2010 sees the redesign of our website. Take a look around and let us know what you think.
-            <br />
-            <a href="" class="link">Read more...</a>
-          </p>
-        </div>
-        <div class="box">
-          <h3 class="text1">Useful Links</h3>
-          <ul class="text2 ulPad">
-            <li><a href="#" class="link">Link 1</a></li>
-            <li><a href="#" class="link">Link 2</a></li>
-            <li><a href="#" class="link">Link 3</a></li>
-            <li><a href="#" class="link">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="box">
-          <h3 class="text1">Search</h3>
-          <div class="search-field">
-            <input class="searchBox" type="search" placeholder="Enter keywords....." />
-            <button><img src="img/search-icon.png" width="40px" /></button>
-          </div>
+
+    <div class="main">
+        <div class="navbar">
+            <div class="menu">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">SERVICE</a></li>
+                    <li><a href="#">DESIGN</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </div>
+
+            <div class="search">
+                <input class="srch" type="search" name="" placeholder="Type To text">
+                <a href="#"> <button class="btn">Search</button></a>
+            </div>
 
         </div>
-      </div>
+        <div class="content">
+            <div>
+                <h1>University<br><span>Management</span> <br>System</h1>
+                <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque
+                    expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus
+                    <br> a quae totam ipsa illum minus laudantium?
+                </p>
+
+                <button class="cn"><a href="#">JOIN US</a></button>
+            </div>
+
+            <div class="form">
+                <h2>Login Here</h2>
+                <input type="email" name="email" placeholder="Enter Email Here">
+                <input type="password" name="" placeholder="Enter Password Here">
+                <button class="btnn"><a href="#">Login</a></button>
+
+                <p class="link">Don't have an account<br>
+                    <a href="#">Sign up </a> here</a>
+                </p>
+                <p class="liw">Log in with</p>
+
+                <div class="icons">
+                    <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-google"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-skype"></ion-icon></a>
+                </div>
+
+            </div>
+        </div>
     </div>
-  </div>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 
 </html>
