--- a/view/index.html
+++ b/view/index.html
@@ -3,12 +3,17 @@
 
 <head>
     <title>🏫 University Management System</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
     <div class="main">
+        <a href="https://github.com/aHasnat1997/university-management-system-typescript.git" target="_blank"
+            class="github-icon">
+            <i class="fa-brands fa-github"></i>
+        </a>
         <div class="navbar">
             <div class="menu">
                 <ul>
@@ -27,11 +32,12 @@
 
         </div>
         <div class="content">
-            <div>
-                <h1>University<br><span>Management</span> <br>System</h1>
-                <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque
-                    expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus
-                    <br> a quae totam ipsa illum minus laudantium?
+            <div class="text-content">
+                <h1>University<br><span>Management</span></h1>
+                <p class="par">
+                    We are delighted to introduce you to our University Management System, a cutting-edge platform
+                    designed to streamline administrative processes and enhance the overall efficiency of our academic
+                    institution.
                 </p>
 
                 <button class="cn"><a href="#">JOIN US</a></button>
